CSS font changes
Initial changes for font changes and fixes

--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -659,11 +659,11 @@ body,
 
 .simple_form {
   .actions {
-    margin-top: 15px;
+    margin-top: 0.95rem;
   }
 
   .button {
-    font-size: 15px;
+    font-size: 0.95rem;
   }
 }
 
@@ -675,7 +675,7 @@ body,
   #form_status_batch_action {
     margin-bottom: 5px;
     margin-inline-end: 5px;
-    font-size: 14px;
+    font-size: 0.9rem;
   }
 
   input.button {
