--- a/app/javascript/flavours/aether/styles/components/compose_form.scss
+++ b/app/javascript/flavours/aether/styles/components/compose_form.scss
@@ -27,7 +27,7 @@
 
 .character-counter {
   cursor: default;
-  font-family: $font-sans-serif, sans-serif;
+  font-family: var(--ui-interface-font), sans-serif;
   font-size: 14px;
   font-weight: 600;
   color: var(--ui-font-brighter-color);
