--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -77,6 +77,7 @@
       margin-inline-start: 15px;
       text-align: start;
       padding-top: 2px;
+      font-family: var(--ui-post-font), sans-serif;
 
       i[data-hidden] {
         display: none;
