--- a/app/javascript/flavours/aether/styles/components/media.scss
+++ b/app/javascript/flavours/aether/styles/components/media.scss
@@ -49,7 +49,7 @@
   inset-inline-start: 6px;
   display: flex;
   gap: 2px;
-  font-family: $font-sans-serif, sans-serif;
+  font-family: var(--ui-interface-font), sans-serif;
 }
 
 .media-gallery__gifv__label {
