--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -56,6 +56,7 @@
   overflow: visible;
   padding-top: 5px;
   clear: both;
+  font-family: var(--ui-post-font), sans-serif;
 
   &:focus {
     outline: 0;
