--- a/app/javascript/flavours/aether/styles/polls.scss
+++ b/app/javascript/flavours/aether/styles/polls.scss
@@ -185,7 +185,7 @@
     padding-top: 6px;
     padding-bottom: 5px;
     color: var(--ui-font-secondary-color);
-    font-family: $font-sans-serif, sans-serif;
+    font-family: var(--ui-interface-font), sans-serif;
   }
 
   &__link {
