Switch to variable fonts

--- a/app/javascript/styles/fonts/lexend.scss
+++ b/app/javascript/styles/fonts/lexend.scss
@@ -1,6 +1,5 @@
 @font-face {
   font-family: lexend;
-  src:
-    local('Lexend'),
-    url('~fonts/flow-block/lexend.ttf') format('truetype');
+  src: url('~fonts/lexend/lexend.ttf') format('truetype-variations');
+  font-weight: 1 999;
 }
