--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -3,6 +3,7 @@
 @import 'fonts/roboto';
 @import 'fonts/roboto-mono';
 @import 'fonts/flow-block';
+@import 'fonts/lexend';
 @import 'fonts/opendyslexic';
 
 @import 'flavours/aether/reset';
