--- a/app/javascript/styles/fonts/flow-block.scss
+++ b/app/javascript/styles/fonts/flow-block.scss
@@ -1,8 +1,6 @@
 @font-face {
   font-family: flow-block;
-  src:
-    local('Flow Block'),
-    url('~fonts/flow-block/flowblock-regular.ttf') format('truetype');
+  src: url('~fonts/flow-block/flowblock-regular.ttf') format('truetype');
   font-weight: normal;
   font-display: block;
   font-style: normal;
