--- a/app/javascript/flavours/aether/styles/widgets.scss
+++ b/app/javascript/flavours/aether/styles/widgets.scss
@@ -22,7 +22,7 @@
   }
 
   &__text {
-    background: $ui-base-color;
+    background: var(--ui-base-color);
     padding: 20px;
     border-radius: 0 0 4px 4px;
     font-size: 15px;
@@ -121,7 +121,7 @@
   padding: 15px;
   padding-bottom: 20px;
   border-radius: 4px;
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   box-shadow: 0 0 15px rgba($base-shadow-color, 0.2);
   color: var(--ui-font-secondary-color);
   font-weight: 400;
@@ -198,7 +198,7 @@
 }
 
 .directory {
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   border-radius: 4px;
   box-shadow: 0 0 15px rgba($base-shadow-color, 0.2);
 
@@ -211,7 +211,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background: $ui-base-color;
+      background: var(--ui-base-color);
       border-radius: 4px;
       padding: 15px;
       text-decoration: none;
@@ -223,7 +223,7 @@
       &:hover,
       &:active,
       &:focus {
-        background: lighten($ui-base-color, 8%);
+        background: var(--ui-body-color);
       }
     }
 
@@ -305,7 +305,7 @@
   tbody td {
     padding: 15px 0;
     vertical-align: middle;
-    border-bottom: 1px solid lighten($ui-base-color, 8%);
+    border-bottom: 1px solid var(--ui-body-color);
   }
 
   tbody tr:last-child td {
