--- a/app/javascript/flavours/aether/styles/components/contentwarning.scss
+++ b/app/javascript/flavours/aether/styles/components/contentwarning.scss
@@ -45,7 +45,7 @@
     border-inline-start: 1px solid currentColor;
     padding: 0;
     padding-inline-start: 4px;
-    font-size: 16px;
+    font-size: 1rem;
     vertical-align: -2px;
   }
 
