--- a/app/javascript/flavours/aether/styles/components/directory.scss
+++ b/app/javascript/flavours/aether/styles/components/directory.scss
@@ -28,11 +28,11 @@
 }
 
 .radio-button {
-  font-size: 14px;
+  font-size: 0.9rem;
   position: relative;
   display: inline-block;
   padding: 6px 0;
-  line-height: 18px;
+  line-height: 1.1em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
