--- a/app/javascript/flavours/aether/styles/components/sensitive.scss
+++ b/app/javascript/flavours/aether/styles/components/sensitive.scss
@@ -14,8 +14,8 @@
   padding: 2px 6px;
   color: var(--ui-font-color);
   background: rgba($base-overlay-background, 0.5);
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 0.75rem;
+  line-height: 1.5;
   text-transform: uppercase;
   opacity: 0.9;
   transition: opacity 0.1s ease;
