--- a/app/javascript/flavours/aether/styles/components/signed_out.scss
+++ b/app/javascript/flavours/aether/styles/components/signed_out.scss
@@ -79,13 +79,13 @@
   &__number {
     font-weight: 600;
     color: var(--ui-font-color);
-    font-size: 14px;
+    font-size: 0.9rem;
   }
 
   &__number-label {
     color: var(--ui-font-dimmest-color);
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.9rem;
   }
 
   h4 {
