--- a/app/javascript/flavours/aether/styles/components/single_column.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column.scss
@@ -27,8 +27,8 @@
   }
 
   .search__input {
-    line-height: 18px;
-    font-size: 16px;
+    line-height: 1.2;
+    font-size: 1rem;
     padding: 15px;
     padding-inline-end: 30px;
   }
@@ -123,12 +123,12 @@
   }
 
   .autosuggest-textarea__textarea {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .search__input {
-    line-height: 18px;
-    font-size: 16px;
+    line-height: 1.2;
+    font-size: 1rem;
     padding: 15px;
     padding-inline-end: 30px;
   }
