--- a/app/javascript/flavours/aether/styles/tables.scss
+++ b/app/javascript/flavours/aether/styles/tables.scss
@@ -7,7 +7,7 @@
   th,
   td {
     padding: 8px;
-    line-height: 18px;
+    line-height: 1.1rem;
     vertical-align: top;
     border-top: 1px solid var(--ui-body-color);
     text-align: start;
