--- a/app/javascript/flavours/aether/styles/_mixins.scss
+++ b/app/javascript/flavours/aether/styles/_mixins.scss
@@ -61,7 +61,7 @@
   background: $ui-base-color;
   color: var(--ui-font-dimmest-color);
   border-radius: 4px;
-  font-size: 14px;
+  font-size: 0.9rem;
   margin: 0;
 }
 
@@ -77,7 +77,7 @@
   h4 {
     text-transform: uppercase;
     color: var(--ui-font-bright-color);
-    font-size: 13px;
+    font-size: 0.85rem;
     font-weight: 500;
     margin-bottom: 10px;
   }
