--- a/app/javascript/flavours/aether/styles/components/compose_form.scss
+++ b/app/javascript/flavours/aether/styles/components/compose_form.scss
@@ -28,7 +28,7 @@
 .character-counter {
   cursor: default;
   font-family: var(--ui-interface-font), sans-serif;
-  font-size: 14px;
+  font-size: 0.9rem;
   font-weight: 600;
   color: var(--ui-font-brighter-color);
 
@@ -93,7 +93,7 @@
       outline: 0;
     }
     @include single-column('screen and (max-width: 630px)') {
-      font-size: 16px;
+      font-size: 1rem;
     }
   }
 }
@@ -105,7 +105,7 @@
   box-shadow: 0 2px 6px rgba($base-shadow-color, 0.3);
   padding: 8px 10px;
   border-radius: 4px;
-  font-size: 13px;
+  font-size: 0.8rem;
   font-weight: 400;
 
   a {
@@ -124,7 +124,7 @@
 .compose-form__sensitive-button {
   padding: 10px;
   padding-top: 0;
-  font-size: 14px;
+  font-size: 0.9rem;
   font-weight: 500;
 
   &.active {
@@ -180,13 +180,12 @@
 
 .reply-indicator__cancel {
   float: right;
-  line-height: 24px;
 }
 
 .reply-indicator__content {
   position: relative;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 0.9rem;
+  line-height: 1.1em;
   word-wrap: break-word;
   font-weight: 400;
   overflow: hidden;
@@ -272,7 +271,7 @@
       }
 
       @include single-column('screen and (max-width: 630px)') {
-        font-size: 16px;
+        font-size: 1rem;
       }
 
       @include limited-single-column('screen and (max-width: 600px)') {
@@ -312,7 +311,7 @@
       }
 
       @include single-column('screen and (max-width: 630px)') {
-        font-size: 16px;
+        font-size: 1rem;
       }
 
       @include limited-single-column('screen and (max-width: 600px)') {
@@ -337,8 +336,8 @@
     width: 24px;
     height: 24px;
     color: var(--ui-font-brighter-color);
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 1.1rem;
+    line-height: 1.3em;
     text-align: center;
     opacity: 0.8;
   }
@@ -360,7 +359,7 @@
   background: $ui-secondary-color;
   border-radius: 0 0 4px 4px;
   color: var(--ui-inverted-font-color);
-  font-size: 14px;
+  font-size: 0.9rem;
   padding: 6px;
 }
 
@@ -387,8 +386,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    line-height: 18px;
-    font-size: 14px;
+    line-height: 1.1em;
+    font-size: 0.9rem;
   }
 
   .autosuggest-hashtag {
@@ -461,7 +460,7 @@
   .icon-button {
     flex: 0 1 auto;
     color: var(--ui-font-secondary-color);
-    font-size: 14px;
+    font-size: 0.9rem;
     font-weight: 500;
     padding: 10px;
     font-family: inherit;
@@ -508,13 +507,13 @@
   overflow: hidden;
 
   .fa {
-    font-size: 34px;
+    font-size: 1.8rem;
     margin-inline-end: 10px;
   }
 
   span {
     display: block;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 500;
     text-transform: uppercase;
   }
@@ -545,7 +544,7 @@
 .compose-form__modifiers {
   color: var(--ui-font-color);
   font-family: inherit;
-  font-size: 14px;
+  font-size: 0.9rem;
   background: var(--ui-body-secondary-color);
 }
 
@@ -573,7 +572,7 @@
     box-sizing: content-box;
     padding: 0 3px;
     height: 27px;
-    line-height: 27px;
+    line-height: 1;
     vertical-align: bottom;
   }
 
@@ -636,6 +635,10 @@
   background: var(--ui-body-color);
   overflow: hidden;
   transform-origin: 50% 0;
+
+  .fa {
+    font-size: 1.5rem;
+  }
 }
 
 .privacy-dropdown__option {
@@ -644,6 +647,9 @@
   padding: 10px;
   color: var(--ui-font-color);
   cursor: pointer;
+  font-weight: 300;
+  font-size: 0.9rem;
+  line-height: 1.2;
 
   .privacy-dropdown__option__content {
     flex: 1 1 auto;
@@ -656,7 +662,8 @@
     strong {
       display: block;
       color: var(--ui-font-color);
-      font-weight: 500;
+      font-weight: 700;
+      font-size: 1.2rem;
     }
   }
 
