--- a/app/javascript/flavours/aether/styles/components/domains.scss
+++ b/app/javascript/flavours/aether/styles/components/domains.scss
@@ -7,7 +7,7 @@
     display: block;
     color: var(--ui-font-color);
     text-decoration: none;
-    font-size: 14px;
+    font-size: 0.9rem;
     font-weight: 500;
   }
 }
