--- a/app/javascript/flavours/aether/styles/components/error_boundary.scss
+++ b/app/javascript/flavours/aether/styles/components/error_boundary.scss
@@ -1,11 +1,11 @@
 .error-boundary {
   color: var(--ui-font-color);
-  font-size: 15px;
-  line-height: 20px;
+  font-size: 0.95rem;
+  line-height: 1.25em;
 
   h1 {
-    font-size: 26px;
-    line-height: 36px;
+    font-size: 1.5rem;
+    line-height: 1.5em;
     font-weight: 400;
     margin-bottom: 8px;
   }
