--- a/app/javascript/flavours/aether/styles/components/explore.scss
+++ b/app/javascript/flavours/aether/styles/components/explore.scss
@@ -54,8 +54,8 @@
     }
 
     &__title {
-      font-size: 19px;
-      line-height: 24px;
+      font-size: 1.15rem;
+      line-height: 1.15em;
       font-weight: 500;
       margin-bottom: 4px;
     }
