--- a/app/javascript/flavours/aether/styles/components/lists.scss
+++ b/app/javascript/flavours/aether/styles/components/lists.scss
@@ -14,7 +14,7 @@
     padding: 15px 0;
     background: var(--ui-base-lighter-color);
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     text-align: center;
     border-radius: 8px 8px 0 0;
   }
@@ -89,7 +89,7 @@
     flex: 1 1 auto;
     overflow: hidden;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1rem;
     padding: 10px;
   }
 }
