--- a/app/javascript/flavours/aether/styles/components/local_settings.scss
+++ b/app/javascript/flavours/aether/styles/components/local_settings.scss
@@ -56,14 +56,13 @@
   h1 {
     font-size: 1.4rem;
     font-weight: 500;
-    line-height: 24px;
     margin-bottom: 20px;
   }
 
   h2 {
     font-size: 1rem;
     font-weight: 500;
-    line-height: 20px;
+    line-height: 1.2em;
     margin-top: 20px;
     margin-bottom: 10px;
   }
@@ -128,7 +127,7 @@
   background: var(--ui-body-secondary-color);
   width: 212px;
   font-size: 1rem;
-  line-height: 20px;
+  line-height: 1.1;
   overflow-y: auto;
 }
 
