--- a/app/javascript/flavours/aether/styles/components/media.scss
+++ b/app/javascript/flavours/aether/styles/components/media.scss
@@ -34,12 +34,12 @@
 
 .media-spoiler__warning {
   display: block;
-  font-size: 14px;
+  font-size: 0.9rem;
 }
 
 .media-spoiler__trigger {
   display: block;
-  font-size: 11px;
+  font-size: 0.7rem;
   font-weight: 500;
 }
 
@@ -58,11 +58,11 @@
   background: rgba($black, 0.65);
   padding: 2px 6px;
   border-radius: 8px;
-  font-size: 11px;
+  font-size: 0.8rem;
   font-weight: 700;
   z-index: 1;
   pointer-events: none;
-  line-height: 18px;
+  line-height: 1em;
 }
 
 .media-gallery {
@@ -240,7 +240,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  font-size: 24px;
+  font-size: 1.5rem;
   height: 20vmax;
   margin: auto 0;
   padding: 30px 15px;
@@ -543,12 +543,12 @@
 
     &__title {
       display: block;
-      font-size: 14px;
+      font-size: 0.9rem;
     }
 
     &__subtitle {
       display: block;
-      font-size: 11px;
+      font-size: 0.7rem;
       font-weight: 500;
     }
   }
@@ -576,7 +576,7 @@
     flex: 0 1 auto;
     min-width: 30px;
     align-items: center;
-    font-size: 16px;
+    font-size: 1rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -587,7 +587,7 @@
       flex: 0 0 auto;
       background: transparent;
       padding: 5px;
-      font-size: 16px;
+      font-size: 1rem;
       border: 0;
       color: rgba($white, 0.75);
 
@@ -610,7 +610,7 @@
   &__time-sep,
   &__time-total,
   &__time-current {
-    font-size: 14px;
+    font-size: 0.9rem;
     font-weight: 500;
   }
 
@@ -703,7 +703,7 @@
 
     a {
       text-decoration: none;
-      font-size: 14px;
+      font-size: 0.9rem;
       font-weight: 500;
       color: $white;
 
