--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -19,8 +19,8 @@
 
 .link-button {
   display: block;
-  font-size: 15px;
-  line-height: 20px;
+  font-size: 0.95rem;
+  line-height: 1.25em;
   color: var(--ui-highlight-color);
   border: 0;
   background: transparent;
@@ -56,10 +56,10 @@
   cursor: pointer;
   display: inline-block;
   font-family: var(--ui-interface-font), sans-serif;
-  font-size: 15px;
+  font-size: 0.95rem;
   font-weight: 500;
   letter-spacing: 0;
-  line-height: 22px;
+  line-height: 1.2em;
   overflow: hidden;
   padding: 7px 18px;
   position: relative;
@@ -305,7 +305,7 @@
     display: inline-block;
     width: auto;
     margin-inline-start: 4px;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 500;
   }
 }
@@ -313,8 +313,8 @@
 .text-icon,
 .text-icon-button {
   font-weight: 600;
-  font-size: 11px;
-  line-height: 27px;
+  font-size: 0.75rem;
+  line-height: 2;
   cursor: default;
 }
 
@@ -456,8 +456,8 @@ body > [data-popper-placement] {
   &.inline {
     padding: 0;
     height: 18px;
-    font-size: 15px;
-    line-height: 18px;
+    font-size: 0.95rem;
+    line-height: 1.1;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -483,7 +483,7 @@ body > [data-popper-placement] {
 }
 
 .display-name__account {
-  font-size: 14px;
+  font-size: 0.9rem;
 }
 
 .image-loader {
@@ -611,8 +611,8 @@ body > [data-popper-placement] {
       border-bottom: 1px solid var(--ui-body-secondary-color);
       padding: 4px 14px;
       padding-bottom: 8px;
-      font-size: 13px;
-      line-height: 18px;
+      font-size: 0.8rem;
+      line-height: 1.1em;
       color: var(--ui-highlight-button-text-color);
     }
 
@@ -677,7 +677,6 @@ body > [data-popper-placement] {
 
 .dropdown-menu__item {
   font-size: 1.1rem;
-  line-height: 18px;
   font-weight: 500;
   display: block;
   color: var(--ui-highlight-button-text-color);
@@ -757,7 +756,7 @@ body > [data-popper-placement] {
 
 .dropdown--active .dropdown__content {
   display: block;
-  line-height: 18px;
+  line-height: 1.1em;
   max-width: 311px;
   inset-inline-end: 0;
   text-align: start;
@@ -784,8 +783,8 @@ body > [data-popper-placement] {
   }
 
   & > ul > li > a {
-    font-size: 13px;
-    line-height: 18px;
+    font-size: 0.75rem;
+    line-height: 1.1em;
     display: block;
     padding: 4px 14px;
     box-sizing: border-box;
@@ -817,14 +816,14 @@ body > [data-popper-placement] {
   color: var(--ui-font-dimmer-color);
 
   h1 {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     margin-bottom: 40px;
     text-align: center;
   }
 
   p {
-    font-size: 13px;
+    font-size: 0.85rem;
     margin-bottom: 20px;
   }
 }
@@ -881,7 +880,7 @@ body > [data-popper-placement] {
   color: var(--ui-font-color);
   text-decoration: none;
   text-align: center;
-  font-size: 14px;
+  font-size: 0.9rem;
   font-weight: 500;
   border-bottom: 2px solid var(--ui-base-lighter-color);
   transition: all 50ms linear;
@@ -889,7 +888,7 @@ body > [data-popper-placement] {
 
   .fa {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   &:hover,
@@ -927,9 +926,9 @@ body > [data-popper-placement] {
     background: var(--ui-highlight-color);
     padding: 1px 6px;
     border-radius: var(--ui-border-radius);
-    font-size: 10px;
+    font-size: 0.6rem;
     font-weight: 500;
-    line-height: 14px;
+    line-height: 1em;
     color: var(--ui-highlight-button-text-color);
   }
 
@@ -1136,7 +1135,7 @@ body > [data-popper-placement] {
     h4 {
       border-bottom: 1px solid var(--ui-base-lighter-color);
       padding: 10px;
-      font-size: 12px;
+      font-size: 0.75rem;
       text-transform: uppercase;
       font-weight: 500;
 
@@ -1176,8 +1175,8 @@ body > [data-popper-placement] {
 .column-link__badge {
   display: inline-block;
   border-radius: var(--ui-border-radius);
-  font-size: 12px;
-  line-height: 19px;
+  font-size: 0.75rem;
+  line-height: 1.3;
   font-weight: 500;
   padding: 4px 8px;
   margin: -6px 10px;
@@ -1225,7 +1224,7 @@ body > [data-popper-placement] {
   }
 
   @include limited-single-column('screen and (max-width: 600px)') {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   &.light {
@@ -1368,7 +1367,7 @@ button.icon-button.active i.fa-retweet {
     border-radius: 2px;
     width: 30px;
     height: 30px;
-    font-size: 20px;
+    font-size: 1.25rem;
     color: var(--ui-font-dimmest-color);
     text-shadow: 0 0 5px black;
     display: flex;
@@ -1398,7 +1397,7 @@ button.icon-button.active i.fa-retweet {
 
 .loading-indicator {
   color: var(--ui-font-dimmer-color);
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 400;
   text-transform: uppercase;
   overflow: visible;
@@ -1538,20 +1537,20 @@ button.icon-button.active i.fa-retweet {
       flex-direction: column;
       color: #fff; // Hardcoded color
       font-weight: 500;
-      font-size: 14px;
+      font-size: 0.9rem;
       font-family: roboto, sans-serif;
     }
 
     &__action {
       font-weight: 400;
-      font-size: 13px;
+      font-size: 0.85rem;
     }
   }
 }
 
 .setting-toggle {
   display: block;
-  line-height: 24px;
+  line-height: 1.5em;
 }
 
 .setting-toggle__label,
@@ -1650,7 +1649,7 @@ button.icon-button.active i.fa-retweet {
   justify-content: center;
   text-align: center;
   color: var(--ui-font-secondary-color);
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 500;
   border: 2px dashed var(--ui-base-lighter-color);
   border-radius: var(--ui-border-radius);
@@ -1728,14 +1727,14 @@ button.icon-button.active i.fa-retweet {
     }
 
     &__relative-time {
-      font-size: 15px;
+      font-size: 0.95rem;
       color: var(--ui-font-dimmest-color);
       padding-inline-start: 15px;
     }
 
     &__names {
       color: var(--ui-font-dimmest-color);
-      font-size: 15px;
+      font-size: 0.95rem;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -1799,7 +1798,7 @@ noscript {
   }
 
   div {
-    font-size: 14px;
+    font-size: 0.9rem;
     margin: 30px auto;
     color: var(--ui-font-secondary-color);
     max-width: 400px;
