--- a/app/javascript/flavours/aether/styles/components/modal.scss
+++ b/app/javascript/flavours/aether/styles/components/modal.scss
@@ -175,7 +175,7 @@
   .error-modal__nav {
     color: var(--ui-font-bright-color);
     border: 0;
-    font-size: 14px;
+    font-size: 0.9rem;
     font-weight: 500;
     padding: 10px 25px;
     line-height: inherit;
@@ -245,10 +245,10 @@
 
 .onboarding-modal__page {
   cursor: default;
-  line-height: 21px;
+  line-height: 1.4em;
 
   h1 {
-    font-size: 18px;
+    font-size: 1.1rem;
     font-weight: 500;
     color: var(--ui-inverted-font-color);
     margin-bottom: 20px;
@@ -269,7 +269,7 @@
   }
 
   p {
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--ui-font-bright-color);
     margin-top: 10px;
     margin-bottom: 10px;
@@ -283,7 +283,7 @@
       background: var(--ui-base-color);
       color: var(--ui-highlight-color);
       border-radius: 4px;
-      font-size: 14px;
+      font-size: 0.9rem;
       padding: 3px 6px;
 
       @each $lang in $cjk-langs {
@@ -310,8 +310,8 @@
     margin-bottom: 10px;
 
     h1 {
-      font-size: 26px;
-      line-height: 36px;
+      font-size: 1.8rem;
+      line-height: 2.2em;
       margin-bottom: 8px;
     }
 
@@ -329,7 +329,7 @@
 
 .display-case {
   text-align: center;
-  font-size: 15px;
+  font-size: 0.95rem;
   margin-bottom: 15px;
 
   &__label {
@@ -337,7 +337,7 @@
     color: var(--ui-inverted-font-color);
     margin-bottom: 5px;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 
   &__case {
@@ -364,7 +364,7 @@
     border-radius: 4px;
     padding: 10px;
     text-align: center;
-    font-size: 14px;
+    font-size: 0.9rem;
     box-shadow: 1px 2px 6px rgba($base-shadow-color, 0.3);
 
     .onboarding-modal__image {
@@ -413,15 +413,15 @@
 
 @media screen and (width <= 320px) and (height <= 600px) {
   .onboarding-modal__page p {
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.8rem;
+    line-height: 1.4em;
   }
 
   .onboarding-modal__page-two .figure,
   .onboarding-modal__page-three .figure,
   .onboarding-modal__page-four .figure,
   .onboarding-modal__page-five .figure {
-    font-size: 12px;
+    font-size: 0.75rem;
     margin-bottom: 10px;
   }
 
@@ -431,7 +431,7 @@
 
   .onboarding-modal__page-four__columns .column-header {
     padding: 5px;
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
 
@@ -463,7 +463,7 @@
   .status__relative-time {
     color: var(--ui-font-dimmer-color);
     float: right;
-    font-size: 14px;
+    font-size: 0.9rem;
     width: auto;
     margin: initial;
     padding: initial;
@@ -471,7 +471,7 @@
 
   .status__visibility-icon {
     color: var(--ui-font-dimmer-color);
-    font-size: 14px;
+    font-size: 0.9rem;
     padding: 0 4px;
   }
 
@@ -525,7 +525,7 @@
   justify-content: space-between;
   background: var(--ui-body-secondary-color);
   padding: 10px;
-  line-height: 36px;
+  line-height: 1.6;
 
   & > div {
     flex: 1 1 auto;
@@ -544,17 +544,17 @@
 }
 
 .boost-modal__status-header {
-  font-size: 15px;
+  font-size: 0.95rem;
 }
 
 .boost-modal__status-time {
   float: right;
-  font-size: 14px;
+  font-size: 0.9rem;
 }
 
 .mute-modal,
 .block-modal {
-  line-height: 24px;
+  line-height: 1.3rem;
 }
 
 .mute-modal .react-toggle,
@@ -591,26 +591,26 @@
   }
 
   &__title {
-    font-size: 28px;
-    line-height: 33px;
+    font-size: 1.6rem;
+    line-height: 1.2;
     font-weight: 700;
     margin-bottom: 15px;
 
     @media screen and (height <= 800px) {
-      font-size: 22px;
+      font-size: 1.2rem;
     }
   }
 
   &__subtitle {
-    font-size: 17px;
+    font-size: 1.05rem;
     font-weight: 600;
-    line-height: 22px;
+    line-height: 1.4;
     margin-bottom: 4px;
   }
 
   &__lead {
-    font-size: 17px;
-    line-height: 22px;
+    font-size: 1.05rem;
+    line-height: 1.4;
     color: var(--ui-font-color);
     margin-bottom: 30px;
 
@@ -692,13 +692,13 @@
     }
 
     & > .poll__option__text {
-      font-size: 13px;
+      font-size: 0.85rem;
       color: var(--ui-font-secondary-color);
 
       strong {
-        font-size: 17px;
+        font-size: 1.05rem;
         font-weight: 500;
-        line-height: 22px;
+        line-height: 1.2;
         color: var(--ui-font-color);
         display: block;
         margin-bottom: 4px;
@@ -722,8 +722,8 @@
     background: $simple-background-color;
     padding: 10px;
     font-family: inherit;
-    font-size: 17px;
-    line-height: 22px;
+    font-size: 1.05rem;
+    line-height: 1.2;
     resize: vertical;
     border: 0;
     outline: 0;
@@ -744,7 +744,7 @@
     align-items: center;
 
     & > span {
-      font-size: 17px;
+      font-size: 1.05rem;
       font-weight: 500;
       margin-inline-start: 10px;
     }
@@ -835,8 +835,8 @@
   max-width: 320px;
 
   p {
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.9rem;
+    line-height: 1.1;
     margin-bottom: 20px;
   }
 
@@ -849,7 +849,7 @@
     background: var(--ui-body-color);
     padding: 10px;
     font-family: inherit;
-    font-size: 14px;
+    font-size: 0.9rem;
     resize: none;
     outline: 0;
     border-radius: 4px;
@@ -880,7 +880,7 @@
       &__modifiers {
         color: var(--ui-font-color);
         font-family: inherit;
-        font-size: 14px;
+        font-size: 0.9rem;
         background: $white;
       }
     }
@@ -895,7 +895,7 @@
   .setting-text-label {
     display: block;
     color: var(--ui-font-color);
-    font-size: 14px;
+    font-size: 0.9rem;
     font-weight: 500;
     margin-bottom: 10px;
   }
@@ -906,7 +906,7 @@
 
     &__label {
       color: var(--ui-font-color);
-      font-size: 14px;
+      font-size: 0.9rem;
     }
   }
 
@@ -957,7 +957,7 @@
         color: var(--ui-font-color);
         display: flex;
         padding: 12px 16px;
-        font-size: 15px;
+        font-size: 0.95rem;
         align-items: center;
         text-decoration: none;
 
@@ -1001,7 +1001,7 @@
 .block-modal__cancel-button {
   background-color: transparent;
   color: var(--ui-highlight-color);
-  font-size: 14px;
+  font-size: 0.9rem;
   font-weight: 500;
   border: 2px solid;
   padding: 5px 18px;
@@ -1023,7 +1023,7 @@
   padding-inline-start: 20px;
   padding-inline-end: 20px;
   padding-bottom: 10px;
-  font-size: 14px;
+  font-size: 0.9rem;
 
   label,
   input {
@@ -1036,7 +1036,7 @@
 .block-modal__container,
 .report-modal__target {
   padding: 30px;
-  font-size: 16px;
+  font-size: 1rem;
 
   strong {
     font-weight: 500;
@@ -1051,7 +1051,7 @@
   select {
     appearance: none;
     box-sizing: border-box;
-    font-size: 14px;
+    font-size: 0.9rem;
     color: var(--ui-inverted-font-color);
     display: inline-block;
     width: auto;
@@ -1115,8 +1115,8 @@
 
   .status__content {
     color: var(--ui-font-secondary-color);
-    font-size: 19px;
-    line-height: 24px;
+    font-size: 1.15rem;
+    line-height: 1.25;
 
     .emojione {
       width: 24px;
@@ -1152,7 +1152,7 @@
   h4 {
     padding: 30px;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     text-align: center;
   }
 
@@ -1173,7 +1173,7 @@
       font-family: roboto-monospace, monospace;
       background: var(--ui-base-color);
       color: var(--ui-font-color);
-      font-size: 14px;
+      font-size: 0.9rem;
       margin: 0;
       margin-bottom: 15px;
       border-radius: 4px;
@@ -1193,7 +1193,7 @@
       }
 
       @media screen and (width <= 600px) {
-        font-size: 16px;
+        font-size: 1rem;
       }
     }
 
@@ -1261,7 +1261,7 @@
 
     strong {
       color: var(--ui-font-color);
-      font-size: 14px;
+      font-size: 0.9rem;
       font-weight: 500;
       display: block;
       margin-bottom: 5px;
@@ -1351,8 +1351,8 @@ img.modal-warning {
   padding: 20px;
 
   h3 {
-    font-size: 22px;
-    line-height: 33px;
+    font-size: 1.35rem;
+    line-height: 1.5;
     font-weight: 700;
     text-align: center;
   }
@@ -1371,8 +1371,8 @@ img.modal-warning {
     }
 
     p {
-      font-size: 17px;
-      line-height: 22px;
+      font-size: 1.05rem;
+      line-height: 1.4;
       color: var(--ui-font-color);
     }
   }
@@ -1430,8 +1430,8 @@ img.modal-warning {
     color: var(--ui-font-dimmest-color);
     border-radius: 4px;
     padding: 6px 9px;
-    line-height: 22px;
-    font-size: 14px;
+    line-height: 1.8;
+    font-size: 0.9rem;
     transition: border-color 300ms linear;
     flex: 1 1 auto;
     overflow: hidden;
