--- a/app/javascript/flavours/aether/styles/components/regeneration_indicator.scss
+++ b/app/javascript/flavours/aether/styles/components/regeneration_indicator.scss
@@ -1,6 +1,6 @@
 .regeneration-indicator {
   text-align: center;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
   color: var(--ui-font-dimmer-color);
   background: $ui-base-color;
@@ -36,7 +36,7 @@
     }
 
     span {
-      font-size: 15px;
+      font-size: 0.95rem;
       font-weight: 400;
     }
   }
