--- a/app/javascript/flavours/aether/styles/components/search.scss
+++ b/app/javascript/flavours/aether/styles/components/search.scss
@@ -13,7 +13,7 @@
     border-radius: 0 0 4px 4px;
     box-shadow: 4px 4px 6px rgba($base-shadow-color, 0.4);
     z-index: 99;
-    font-size: 13px;
+    font-size: 0.8rem;
     padding: 15px 5px;
 
     h4 {
@@ -100,8 +100,8 @@
   display: block;
   padding: 15px;
   padding-inline-end: 30px;
-  line-height: 18px;
-  font-size: 16px;
+  line-height: 1.1;
+  font-size: 1rem;
   border-radius: 0;
   border-bottom: 2px solid;
   background: transparent;
@@ -140,7 +140,7 @@
     opacity: 0;
     transition: all 100ms linear;
     transition-property: color, transform, opacity;
-    font-size: 18px;
+    font-size: 1.1rem;
     width: 18px;
     height: 18px;
     color: var(--ui-font-secondary-color);
@@ -182,7 +182,7 @@
   background: lighten($ui-base-color, 2%);
   padding: 15px;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1rem;
   cursor: default;
 
   .fa {
@@ -203,7 +203,7 @@
     background: lighten($ui-base-color, 2%);
     font-weight: 500;
     padding: 15px;
-    font-size: 16px;
+    font-size: 1rem;
     cursor: default;
 
     .fa {
@@ -226,7 +226,7 @@
         color 0.2s;
       color: var(--ui-highlight-color);
       text-decoration: none;
-      font-size: 14px;
+      font-size: 0.9rem;
       font-weight: 500;
       display: flex;
       overflow: hidden;
@@ -285,7 +285,7 @@
 
       .trends__item__current {
         flex: 0 0 auto;
-        font-size: 24px;
+        font-size: 1.4rem;
         font-weight: 500;
         text-align: end;
         color: var(--ui-font-secondary-color);
