--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -50,7 +50,7 @@
   position: relative;
   margin: 10px 0;
   font-size: 1rem;
-  line-height: 20px;
+  line-height: 1.2;
   word-wrap: break-word;
   font-weight: 400;
   overflow: visible;
@@ -132,8 +132,8 @@
 .status__content__edited-label {
   display: block;
   cursor: default;
-  font-size: 15px;
-  line-height: 20px;
+  font-size: 0.95rem;
+  line-height: 1.25;
   padding: 0;
   padding-top: 8px;
   color: var(--ui-font-dimmer-color);
@@ -540,7 +540,7 @@
   margin-bottom: 8px;
   margin-inline-start: 58px;
   color: var(--ui-font-dimmer-color);
-  font-size: 14px;
+  font-size: 0.9rem;
   position: relative;
 
   .status__display-name .emojione {
@@ -695,8 +695,8 @@
 .detailed-status__reblogs {
   display: inline-block;
   font-weight: 500;
-  font-size: 12px;
-  line-height: 17px;
+  font-size: 0.75rem;
+  line-height: 1.25;
   margin-inline-start: 6px;
 }
 
@@ -745,7 +745,7 @@ a.status__display-name,
 .detailed-status__display-name {
   color: var(--ui-font-secondary-color);
   display: block;
-  line-height: 24px;
+  line-height: 1.8;
   margin-bottom: 15px;
   overflow: hidden;
 
@@ -757,7 +757,7 @@ a.status__display-name,
   }
 
   strong {
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--ui-font-color);
   }
 }
@@ -801,7 +801,7 @@ a.status__display-name,
 .status-card {
   position: relative;
   display: flex;
-  font-size: 14px;
+  font-size: 0.9rem;
   border: 1px solid var(--ui-body-secondary-color);
   border-radius: var(--ui-border-radius);
   color: var(--ui-font-dimmer-color);
@@ -837,8 +837,8 @@ a.status__display-name,
       border: 0;
       padding: 0 8px;
       text-decoration: none;
-      font-size: 18px;
-      line-height: 18px;
+      font-size: 1rem;
+      line-height: 1;
 
       &:hover,
       &:active,
@@ -848,7 +848,7 @@ a.status__display-name,
     }
 
     a {
-      font-size: 19px;
+      font-size: 1.15rem;
       position: relative;
       bottom: -1px;
     }
@@ -918,7 +918,7 @@ a.status-card {
 .status-card__host {
   display: block;
   margin-top: 5px;
-  font-size: 13px;
+  font-size: 0.8rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -930,7 +930,7 @@ a.status-card {
   position: relative;
 
   & > .fa {
-    font-size: 21px;
+    font-size: 1.15rem;
     position: absolute;
     transform-origin: 50% 50%;
     top: 50%;
@@ -1013,7 +1013,7 @@ a.status-card.compact:hover {
 
 .attachment-list {
   display: flex;
-  font-size: 14px;
+  font-size: 0.9rem;
   border: 1px solid var(--ui-body-color);
   border-radius: var(--ui-border-radius);
   margin-top: 14px;
@@ -1029,7 +1029,7 @@ a.status-card.compact:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 26px;
+    font-size: 1.2rem;
 
     .fa {
       display: block;
@@ -1225,7 +1225,7 @@ a.status-card.compact:hover {
   align-items: center;
   justify-content: center;
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
   color: var(--ui-font-dimmest-color);
@@ -1233,7 +1233,7 @@ a.status-card.compact:hover {
 
   i {
     display: block;
-    font-size: 24px;
+    font-size: 1.4rem;
     font-weight: 400;
     margin-bottom: 10px;
   }
@@ -1249,8 +1249,8 @@ a.status-card.compact:hover {
   margin-top: 16px;
   display: flex;
   flex-wrap: wrap;
-  font-size: 14px;
-  line-height: 18px;
+  font-size: 0.85rem;
+  line-height: 1em;
   gap: 4px;
   color: var(--ui-font-dimmer-color);
 
