--- a/app/javascript/flavours/aether/styles/containers.scss
+++ b/app/javascript/flavours/aether/styles/containers.scss
@@ -29,9 +29,9 @@
       text-decoration: none;
       outline: 0;
       padding: 12px 16px;
-      line-height: 32px;
+      line-height: 2;
       font-weight: 500;
-      font-size: 14px;
+      font-size: 0.9rem;
     }
   }
 }
@@ -56,8 +56,8 @@
   width: 400px;
   margin: 0 auto;
   display: flex;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 0.8rem;
+  line-height: 1.4;
   box-sizing: border-box;
   padding: 20px 0;
   margin-top: 40px;
@@ -102,8 +102,8 @@
 
   .logout-link {
     display: block;
-    font-size: 32px;
-    line-height: 40px;
+    font-size: 2rem;
+    line-height: 1.2;
     margin-inline-start: 10px;
   }
 }
