--- a/app/javascript/flavours/aether/styles/emoji.scss
+++ b/app/javascript/flavours/aether/styles/emoji.scss
@@ -112,7 +112,7 @@
     line-height: 1.15;
   }
 
-  font-size: 13px;
+  font-size: 0.85rem;
   display: inline-block;
   color: var(--ui-inverted-font-color);
 
@@ -219,7 +219,7 @@
   position: relative;
 
   input {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     padding: 7px 9px;
     padding-inline-end: 25px;
@@ -353,7 +353,7 @@
 }
 
 .emoji-mart-no-results {
-  font-size: 14px;
+  font-size: 0.9rem;
   color: var(--ui-font-color);
   text-align: center;
   padding: 5px 6px;
