--- a/app/javascript/flavours/aether/styles/widgets.scss
+++ b/app/javascript/flavours/aether/styles/widgets.scss
@@ -25,9 +25,9 @@
     background: var(--ui-base-color);
     padding: 20px;
     border-radius: 0 0 4px 4px;
-    font-size: 15px;
+    font-size: 0.95rem;
     color: var(--ui-font-dimmest-color);
-    line-height: 20px;
+    line-height: 1.25;
     word-wrap: break-word;
     font-weight: 400;
 
@@ -80,7 +80,7 @@
     padding: 10px;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 13px;
+    font-size: 0.8rem;
     color: var(--ui-font-dimmest-color);
   }
 
@@ -192,7 +192,7 @@
   border-radius: 4px;
   background: $base-shadow-color;
   box-shadow: 0 0 15px rgba($base-shadow-color, 0.2);
-  font-size: 14px;
+  font-size: 0.9rem;
   color: var(--ui-font-dimmest-color);
   margin-bottom: 10px;
 }
@@ -239,7 +239,7 @@
 
     h4 {
       flex: 1 1 auto;
-      font-size: 18px;
+      font-size: 1.1rem;
       font-weight: 700;
       color: var(--ui-font-color);
       white-space: nowrap;
@@ -253,7 +253,7 @@
       small {
         display: block;
         font-weight: 400;
-        font-size: 15px;
+        font-size: 0.85rem;
         margin-top: 8px;
         color: var(--ui-font-dimmest-color);
       }
@@ -315,7 +315,7 @@
   &__count {
     width: 120px;
     text-align: center;
-    font-size: 15px;
+    font-size: 0.85rem;
     font-weight: 500;
     color: var(--ui-font-color);
 
@@ -323,7 +323,7 @@
       display: block;
       color: var(--ui-font-dimmest-color);
       font-weight: 400;
-      font-size: 14px;
+      font-size: 0.9rem;
     }
   }
 
@@ -355,7 +355,7 @@
   }
 
   .fa {
-    font-size: 16px;
+    font-size: 1rem;
 
     &.active {
       color: var(--ui-highlight-color);
