Fix advanced layout

--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -1245,7 +1245,7 @@ img.parallax[src*='/headers/original/missing.png'] {
   margin-bottom: 0;
 }
 
-.account-timeline__bio-column {
+.normal .account-timeline__bio-column {
   .status__info {
     display: none;
   }
