Fix trends items on profile pages

--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -1278,7 +1278,7 @@ img.parallax[src*='/headers/original/missing.png'] {
     left: 0;
   }
 
-  &.trends__item {
+  .trends__item {
     border-bottom: 0;
     width: 50%;
     box-sizing: border-box;
