Status page changes
Fix detailed status pages to make the selected status more obvious and fixed the spacing

--- a/app/javascript/flavours/aether/styles/statuses.scss
+++ b/app/javascript/flavours/aether/styles/statuses.scss
@@ -232,3 +232,15 @@
     text-decoration: underline;
   }
 }
+
+.detailed-status__wrapper {
+  margin-top: 8px;
+}
+
+.status--in-thread {
+  transform: scale(0.98);
+
+  p {
+    transform: scale(1.02);
+  }
+}
