Fix clear button on search and tweak light theme

--- a/app/javascript/flavours/aether/styles/themes.scss
+++ b/app/javascript/flavours/aether/styles/themes.scss
@@ -23,6 +23,10 @@
 .wireless.light-theme {
   background: var(--ui-body-color) !important;
 
+  .ui__header__wrapper {
+    background-color: var(--ui-page-background);
+  }
+
   .ui__header__wrapper::before {
     background: transparent;
   }
@@ -78,7 +82,7 @@
 
   .focusable {
     border-color: var(--ui-page-background);
-    
+
     &:focus {
       border-color: var(--ui-highlight-color);
     }
