--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -83,6 +83,10 @@
   .logo-container-dark {
     display: none !important;
   }
+
+  .light-theme .ui__header__wrapper {
+    background-color: var(--ui-body-color);
+  }
 }
 
 /* Mixed theme */
