--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -84,7 +84,7 @@
     display: none !important;
   }
 
-  .light-theme .ui__header__wrapper {
+  .ui__header__wrapper {
     background-color: var(--ui-body-color);
   }
 }
