Change overflow to use article instead of status

--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -225,8 +225,11 @@
   }
 }
 
-.status {
+article {
   overflow:hidden;
+}
+
+.status {
   padding: 10px 14px;
   position: relative;
   height: auto;
